<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.denisbrandi.stargazers.stargazerslist.viewmodel.StargazersListViewModel" />

    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="32dp"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/owner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/owner"
                    android:inputType="text"
                    android:maxLines="1"
                    android:text="@={viewModel.owner}" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/repository"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/repository"
                    android:inputType="text"
                    android:maxLines="1"
                    android:text="@={viewModel.repository}" />

            </android.support.design.widget.TextInputLayout>


        </android.support.design.widget.AppBarLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:onClick="@{()->viewModel.startSearch()}"
            android:src="@drawable/ic_search_white_24dp"
            app:fabSize="normal"
            app:layout_anchor="@+id/appbar"
            app:layout_anchorGravity="bottom|end" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="@{viewModel.showProgress?View.VISIBLE:View.GONE}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="48dp"
                android:gravity="center"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/placeholder"
                android:textColor="@android:color/black"
                android:visibility="@{!viewModel.showProgress &amp;&amp; viewModel.showPlaceholder?View.VISIBLE:View.GONE}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="48dp"
                android:gravity="center"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/emptySearch"
                android:textColor="@android:color/black"
                android:visibility="@{!viewModel.showProgress &amp;&amp; !viewModel.showPlaceholder &amp;&amp; viewModel.showEmptyView?View.VISIBLE:View.GONE}" />


        </FrameLayout>


    </android.support.design.widget.CoordinatorLayout>

</layout>
